Simmple cleanup.
Switching to logback finally instead of plain sout, added back thread config for redis.